[package]
name = "compiler-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
compiler = { path = "../compiler" }
wasm-bindgen = "0.2.87"
volt = { path = "../../volt-parser/volt-rs" }
